force-app/main/default/objects/BBH_CLUB_History__c/BBH_CLUB_History__c.object-meta.xml
<CustomObject>
    <label>BBH CLUB History</label>
    <nameField>
        <displayFormat>BBH-{0000}</displayFormat>
        <label>BBH CLUB History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BBH CLUB Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>