force-app/main/default/objects/BBH_CLUB_History__c/fields/Newvalue__c.field-meta.xml
<CustomField>
    <fullName>Newvalue__c</fullName>
    <label>New value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>