force-app/main/default/objects/BBH_CLUB_History__c/fields/Oldvalue__c.field-meta.xml
<CustomField>
    <fullName>Oldvalue__c</fullName>
    <label>Old value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>